<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    android:id="@+id/your_dialog_root_element"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/dialog"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/rules"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:textColor="@color/slots"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/desc"
            android:textStyle="bold|italic"
            android:textSize="16sp"
            android:textColor="@color/button_no"/>

        <Button
            android:id="@+id/your_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white_plus"
            android:background="@drawable/rounded"
            android:text="@string/ok"
            android:layout_gravity="center_horizontal">
        </Button>
    </LinearLayout>
    </ScrollView>

</RelativeLayout>