<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    android:id="@+id/your_dialog_root_element"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/dialog"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/win"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:textColor="@color/slots"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/win"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp">
            <Button
                android:id="@+id/your_dialog_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_plus"
                android:padding="8dp"
                android:background="@drawable/rounded_no"
                android:text="@string/back"
                android:layout_gravity="center_horizontal">
            </Button>
            <Button
                android:id="@+id/your_dialog_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/white_plus"
                android:background="@drawable/rounded"
                android:text="@string/ok"
                android:layout_gravity="center_horizontal">
            </Button>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>