<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="aaa.bbb.ccc84.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        android:background="@drawable/menu_back"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="33dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/rounded"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:drawableStart="@drawable/gold"
            android:drawableEnd="@drawable/gold"
            android:text="@string/play"/>
        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="33dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/rounded"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:drawableStart="@drawable/gold"
            android:drawableEnd="@drawable/gold"
            android:text="@string/settings"/>
        <Button
            android:id="@+id/btn_rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="33dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/rounded"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:drawableStart="@drawable/gold"
            android:drawableEnd="@drawable/gold"
            android:text="@string/rules"/>
    </LinearLayout>

</RelativeLayout>
